folder icons for summaries

--- a/card.html
+++ b/card.html
@@ -3,12 +3,30 @@
 <html>
     <head>
         <title>Lia</title>
-        <link rel="stylesheet" type="text/css" href="card.css">
+        <link rel="stylesheet" type="text/css" href="static/css/card.css">
         <meta name="description" content="Lia, she/her/it, 18, Germany">
     </head>
     <body>
         <main>
             <div id="card">
+                <div id="sections">
+                    <details>
+                        <summary>
+                            Test 1
+                        </summary>
+                        <p>
+                        erweiterter Text für Test 1 bla bla bla
+                        </p>
+                    </details>
+                    <details>
+                        <summary>
+                            Test 2
+                        </summary>
+                        <p>
+                        erweiterter Text für Test 2 bla bla bla
+                        </p>
+                    </details>
+                </div>
                 <div id="social-buttons">
                     <a href="https://github.com/hyperbel" target="_blank" alt="A Link to my GitHub account">
                         <img class="social-icon" src="https://github.com/favicon.ico" alt="GitHub Logo">
@@ -21,6 +39,7 @@
                     </a>
                     <a href="https://anilist.co/user/liaisgay" target="_blank" alt="A Link to my AniList account">
                         <img class="social-icon" src="https://anilist.co/favicon.ico" alt="AniList Logo">
+                    </a>
                 </div>
             </div>
         </main>
